<resources>
    <string name="app_name">Story Apps</string>
    <string name="login_title">Masuk untuk melanjutkan</string>
    <string name="user_email">Email</string>
    <string name="user_password">Kata Sandi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="email_must_be_filled_in">Email harus di isi</string>
    <string name="password_less_than_6">Password harus setidaknya 6 karakter</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="login_btn_register">Belum punya akun? Daftar</string>
    <string name="login_btn_help">Butuh bantuan atau pertanyaan hubungi developer <b>holis.nur072219@gmail.com</b> atau kirim pesan via <b>WhatsApp</b></string>
</resources>